--- a/app/src/main/res/layout/popup_addulasan.xml
+++ b/app/src/main/res/layout/popup_addulasan.xml
@@ -14,16 +14,19 @@
         android:layout_marginTop="8dp" />
 
     <EditText
-        android:background="@color/white"
+        android:padding="3dp"
         android:id="@+id/ulasan"
         android:layout_width="wrap_content"
         android:layout_height="150dp"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
         android:layout_below="@+id/rating"
         android:layout_marginTop="8dp"
+        android:background="@color/white"
+        android:backgroundTint="@color/white"
         android:ems="10"
-        android:inputType="textMultiLine"
-        android:layout_alignStart="@+id/rating"
-        android:layout_alignEnd="@+id/rating" />
+        android:hint="Komentar disini"
+        android:inputType="textCapSentences|text" />
 
     <RelativeLayout
         android:layout_width="wrap_content"
@@ -35,18 +38,28 @@
         <Button
             android:id="@+id/batal"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:text="Batal" />
+            android:layout_margin="5dp"
+            android:background="@drawable/button_rect"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:text="Batal"
+            android:textColor="@color/white" />
 
         <Button
             android:id="@+id/simpan"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_height="30dp"
             android:layout_alignParentTop="true"
+            android:layout_margin="5dp"
             android:layout_toEndOf="@+id/batal"
-            android:text="Simpan" />
+            android:background="@drawable/button_rect"
+            android:paddingLeft="8dp"
+            android:paddingRight="8dp"
+            android:text="Simpan"
+            android:textColor="@color/white" />
     </RelativeLayout>
 
 </RelativeLayout>
