--- a/app/src/main/res/layout/n_home_listrowview.xml
+++ b/app/src/main/res/layout/n_home_listrowview.xml
@@ -1,9 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="100dp"
+    android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:paddingLeft="12dp"
+    android:paddingRight="12dp"
+    android:paddingTop="8dp"
+    android:paddingBottom="8dp"
+
     android:background="@color/white"
     >
 
@@ -11,23 +15,25 @@
         android:id="@+id/relativeLayout5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true">
+        android:layout_centerVertical="true"
+        >
 
         <ImageView
             android:id="@+id/img_cover"
-            android:layout_width="80dp"
-            android:layout_height="80dp"
-            android:src="@drawable/dummy_avatar"
-            android:scaleType="centerCrop" />
+            android:layout_width="70dp"
+            android:layout_height="73dp"
+            android:scaleType="centerCrop"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentStart="true" />
     </RelativeLayout>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_alignBottom="@+id/relativeLayout5"
+        android:layout_height="wrap_content"
         android:layout_toEndOf="@+id/relativeLayout5"
-        android:padding="3dp">
+        android:layout_centerVertical="true"
+        android:padding="3dp"
+        android:layout_marginLeft="8dp">
 
         <TextView
             android:id="@+id/judul"
@@ -35,15 +41,18 @@
             android:layout_height="wrap_content"
             android:text="Judul"
 
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentStart="true" />
 
         <TextView
             android:id="@+id/alamat"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Alamat"
-            android:layout_alignBottom="@+id/status"
-            android:layout_alignStart="@+id/ratingBar" />
+            android:layout_below="@+id/ratingBar"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true" />
 
         <TextView
             android:id="@+id/jarak"
@@ -51,18 +60,25 @@
             android:layout_height="wrap_content"
             android:text="0.5 KM"
             android:textAppearance="?android:attr/textAppearanceSmall"
-            android:layout_alignParentBottom="true"
-            android:layout_toEndOf="@+id/alamat"
-            android:layout_marginLeft="5dp" />
+            android:layout_below="@+id/alamat"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentEnd="true" />
 
         <TextView
             android:id="@+id/status"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="BUKA"
-            android:layout_alignParentBottom="true"
-            android:layout_alignParentEnd="true"
-            android:textSize="10dp" />
+            android:textSize="9dp"
+            android:layout_below="@+id/jarak"
+            android:textColor="@color/white"
+            android:layout_alignParentStart="true"
+            android:background="@drawable/bunder_green"
+            android:paddingTop="3dp"
+            android:paddingBottom="3dp"
+            android:paddingRight="10dp"
+            android:paddingLeft="10dp"
+            android:layout_marginTop="3dp" />
 
         <RatingBar
             android:layout_width="wrap_content"
@@ -70,7 +86,9 @@
             android:id="@+id/ratingBar"
             style="?android:attr/ratingBarStyleSmall"
             android:layout_below="@+id/judul"
-            android:layout_alignStart="@+id/judul" />
+            android:layout_alignStart="@+id/judul"
+            android:numStars="5"
+            android:layout_marginTop="5dp" />
 
         <TextView
             android:layout_width="wrap_content"
