--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -2,33 +2,34 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/home_view"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
+    android:focusable="true"
+    android:focusableInTouchMode="true"
+    android:padding="8dp"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context="com.dalbo.jajanon.MainActivity"
-    tools:showIn="@layout/app_bar_main"
-    android:id="@+id/home_view"
-    >
-    <RelativeLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/header_profile"
-        android:layout_centerHorizontal="true">
+    tools:showIn="@layout/app_bar_main">
 
-        <android.support.v4.view.ViewPager
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:id="@+id/home_content"
-            android:layout_alignParentTop="true"
-            android:layout_alignParentStart="true" >
+    <EditText
+        android:id="@+id/cari"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_alignParentTop="true"
+        android:layout_margin="4dp"
+        android:ems="10"
+        android:hint="Cari..."
+        android:inputType="textPersonName" />
 
-            <android.support.v4.view.PagerTabStrip
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/view2"
-                android:background="@color/colorPrimary"
-                android:textColor="@color/white" />
-        </android.support.v4.view.ViewPager>
-    </RelativeLayout>
-
+    <ListView
+        android:id="@+id/mainlist"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentStart="true"
+        android:layout_below="@+id/cari" />
 </RelativeLayout>
